<resources>
    <string name="app_name">Final Project 2</string>

    <string name="usernameInputHint">Username</string>
    <string name="emailInputHInt">Email</string>
    <string name="passwordInputHint">Password</string>
    <string name="confirmPasswordInputHint">Confirm password</string>
    <string name="searchFriendInputHint">Add friend</string>

    <string name="emailInputHelper">E.g: yourname@gmail.com</string>
    <string name="passwordInputHelper">Password must at least 6 characters</string>
    <string name="confirmPasswordInputHelper">Must match to password</string>
    <string name="usernameInputHelper">Sample username input helper</string>

    <string name="passwordInputError">At least 6 characters</string>
    <string name="confirmPasswordInputError">Not match to password</string>
    <string name="emailInputError">Invalid Email</string>
    <string name="usernameInputError">Sample username error</string>

    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="logOut">Log out</string>
    <string name="add">Add</string>

    <string name="navigationHomeTab">Home</string>
    <string name="navigationChatTab">Chat</string>
    <string name="navigationPersonalTab">Setting</string>
    <string name="navigationContactTab">Contact</string>

    <string name="requestSignUp">Have not account yet?</string>
    <string name="sampleSplash">Splash screen</string>

    <string name="onSuccess">Success</string>
    <string name="sampleEmail">sample@gmail.com</string>
    <string name="sampleName">Sample name</string>

    <string name="messageHint">Message</string>
    <string name="slideDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum iaculis eleifend purus vel cursus.</string>
    <string name="slideTitle">Lorem ipsum dolor sit amet</string>

    <string name="pickImage">Pick image from</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="startingConversation">Let\'s start this conversation with great stories!</string>

    <!--    <string name="sampleMessageContent">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>-->
    <string name="sampleMessageTime">12:12</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
