<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.signup.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/registerAvatarImageView"
            android:layout_width="@dimen/registerImagePreviewDimension"
            android:layout_height="@dimen/registerImagePreviewDimension"
            android:layout_margin="@dimen/baseMargin3"
            android:scaleType="centerCrop"
            android:src="@color/colorLightGray" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="@dimen/textInputLayoutWidth"
            android:layout_height="@dimen/textInputLayoutHeight"
            android:layout_marginVertical="@dimen/baseMargin"
            android:hint="@string/emailInputHInt"
            app:helperText="@string/emailInputHelper"
            tools:targetApi="o">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="@dimen/textInputLayoutWidth"
            android:layout_height="@dimen/textInputLayoutHeight"
            android:layout_marginVertical="@dimen/baseMargin"
            android:hint="@string/passwordInputHint"
            app:helperText="@string/passwordInputHelper"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="@dimen/textInputLayoutWidth"
            android:layout_height="@dimen/textInputLayoutHeight"
            android:layout_marginVertical="@dimen/baseMargin"
            android:hint="@string/confirmPasswordInputHint"
            app:helperText="@string/confirmPasswordInputHelper"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerConfirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="@dimen/textInputLayoutWidth"
            android:layout_height="@dimen/textInputLayoutHeight"
            android:layout_marginVertical="@dimen/baseMargin"
            android:hint="@string/usernameInputHint"
            app:helperText="@string/usernameInputHelper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerUsernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/registerProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitRegisterButton"
            android:layout_width="@dimen/textInputLayoutWidth"
            android:layout_height="@dimen/textInputLayoutHeight"
            android:layout_marginVertical="@dimen/baseMargin"
            android:text="@string/signUp">

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>


    <include layout="@layout/sign_up_pick_image_options" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
