<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.signin.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:orientation="vertical">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/signInViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.tabs.TabLayout
            app:tabIndicatorHeight="0dp"
            android:layout_margin="@dimen/baseMargin"
            android:id="@+id/signInActivitySlideIndicator"
            android:layout_width="@dimen/textInputLayoutHeight"
            android:layout_height="@dimen/baseMargin2"
            android:layout_gravity="center"
            app:tabBackground="@drawable/sign_in_slide_indicator_selector" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/textInputLayoutWidth"
            android:layout_height="56dp"
            android:layout_marginVertical="@dimen/baseMargin"
            android:hint="@string/emailInputHInt"
            app:helperText="@string/emailInputHelper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="@dimen/textInputLayoutWidth"
            android:layout_height="@dimen/textInputLayoutHeight"
            android:layout_marginVertical="@dimen/baseMargin"
            android:hint="@string/passwordInputHint"
            app:helperText="@string/passwordInputHelper"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:layout_gravity="center"
            android:minWidth="48dp"
            android:animateLayoutChanges="true"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:background="@drawable/sign_in_button_background"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/submitLoginButton"
            android:layout_marginTop="@dimen/baseMargin"
            android:text="@string/signIn"
            android:orientation="horizontal">

            <TextView
                android:foreground="?android:attr/selectableItemBackground"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:gravity="center"
                android:layout_width="@dimen/textInputLayoutWidth"
                android:layout_height="wrap_content"
                android:id="@+id/signInButtonTextView"
                android:textColor="@color/colorWhite"
                android:text="@string/signIn"
                tools:targetApi="m" />

            <ProgressBar
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/signInButtonProgressBar"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorWhite"
                android:layout_width="36dp"
                android:layout_height="36dp"
                tools:targetApi="lollipop" />

            <ImageView
                android:id="@+id/signInSuccessImageView"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_done_black_24dp"
                android:layout_width="36dp"
                android:layout_height="36dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requestSignUp" />

            <TextView
                android:id="@+id/signUpButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
