<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:elevation="@dimen/halfBaseMargin"
    android:background="@color/colorWhite"
    android:id="@+id/signUpPickImageOptionsBottomSheet"
    android:orientation="vertical"
    style="@style/Theme.MaterialComponents.BottomSheetDialog"
    app:behavior_hideable="true"
    app:behavior_peekHeight="?android:attr/actionBarSize"
    app:layout_behavior="@string/bottom_sheet_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:paddingHorizontal="@dimen/baseMargin2"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

    <TextView
        android:layout_gravity="center"
        android:text="@string/pickImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signUpPickImageCamera"
        android:background="?android:attr/selectableItemBackground"
        android:paddingHorizontal="@dimen/baseMargin2"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <ImageView
            android:layout_marginEnd="@dimen/baseMargin3"
            android:layout_gravity="center"
            android:src="@drawable/ic_camera_alt_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/colorDarkGray"
            android:layout_marginRight="@dimen/baseMargin3" />

        <TextView
            android:layout_gravity="center"
            android:text="@string/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signUpPickImageGallery"
        android:background="?android:attr/selectableItemBackground"
        android:paddingHorizontal="@dimen/baseMargin2"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <ImageView
            android:layout_marginEnd="@dimen/baseMargin3"
            android:layout_gravity="center"
            android:src="@drawable/ic_photo_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/colorDarkGray"
            android:layout_marginRight="@dimen/baseMargin3" />

        <TextView
            android:layout_gravity="center"
            android:text="@string/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>